Criação de página de apresentação pessoal.

--- a/index.html
+++ b/index.html
@@ -1,21 +1,58 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <title>My Page</title>
+  <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-  
+  <article>
+    <header>
+      <h1>Página de Apresentação</h1>
+      <img id="profile-photo" src="media/profile-photo.jpg" alt="foto de perfil">
+      <p>Meu nome é Felipe Figueiredo, tenho 25 anos e sou aluno do curso de Análise e Desenvolvimento de Sistemas no
+        Instituto Infnet.
+      </p>
+      <br>
+    </header>
+    <section>
+      <h2>Carreira</h2>
+      <p>Iniciei a minha carreira na Tecnologia quando ingressei, em 2019, no curso de Gestão em Tecnologia da
+        Informação, na Faculdade Internacional da Paraíba. Em 2021, iniciei a minha primeira atividade profissional na
+        área, como estagiário em Suporte Técnico a aplicações na Vsoft Tecnologia. Ainda em 2021, fui contratado e
+        passei a atuar em tempo integral. Em 2022, fui promovido a Analista de Suporte de nível 2, prestando suporte
+        especializado.</p>
+      <p>Ao longo da minha jornada profissional, pude notar que a escolha pelo curso de Gestão em TI como primeira
+        graduação não foi muito assertiva, pois percebi que tenho maior inclinação para atuar com criação e projetos,
+        enquanto que o escopo de atuação da Gestão em TI, em sua maior parte, é mais operacional, por lidar basicamente
+        com a execução de processos pré-definidos.</p>
+      <br>
+    </section>
+    <section>
+      <h2>Expectativa em relação ao curso no Infnet</h2>
+      <p>Resolvi iniciar o curso de ADS devido ter me identificado com a àrea de Desenvolvimento e por ter notado
+        relativo déficit de conhecimento acerca de tecnologias e ferramentas.</p>
+      <p>Escolhi o Instituto
+        Infnet em função da boa reputação da instituição no mercado de tecnologia e alto conceito junto ao MEC. Tenho
+        grandes expectativas em relação
+        à minha jornada no instituto.</p>
+      <br>
+      <hr>
+    </section>
+    <footer>
+      <p>Contato:</p>
+      <ul>
+        <li><a href="https://www.linkedin.com/in/figueiredofelipe/">LinkedIn</a></li>
+        <li><a href="mailto:figueiredo.felipe@icloud.com">Email</a></li>
+      </ul>
+    </footer>
+  </article>
   <script src="script.js"></script>
 
- <!--
-This script places a badge on your repl's full-browser view back to your repl's cover page. Try various colors for the theme: dark, light, red, orange, yellow, lime, green, teal, blue, blurple, magenta, pink!
--->
-<script src="https://replit.com/public/js/replit-badge.js" theme="blue" defer></script> 
+  <script src="https://replit.com/public/js/replit-badge.js" theme="blue" defer></script>
 </body>
 
 </html>
